--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,10 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[lib]
-name = "dwuckman"
-crate-type = ["cdylib"]
-path = "src/lib.rs"
+# [lib]
+# name = "dwuckman"
+# crate-type = ["cdylib"]
+# path = "src/lib.rs"
 
 [dependencies]
 
